# Leve

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SPEC.md  pyproject.toml  skills-lock.json
.agents/skills/microsandbox/: SKILL.md
.agents/skills/microsandbox/agents/: openai.yaml
.agents/skills/microsandbox/references/: cli-reference.md  examples.md  sdk-go.md  sdk-python.md  sdk-rust.md  sdk-typescript.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: custom-channels.md  local-development.md  production.md
docs/superpowers/plans/: 2026-06-26-src-leve-restructure.md
docs/superpowers/specs/: 2026-06-20-leve-dev-modes-design.md  2026-06-21-open-source-readiness-design.md  2026-06-26-src-leve-restructure-design.md
src/leve/: __init__.py  agent.py  app.py  auth.py  cli.py  config.py  credentials.py  deploy.py  devlog.py  errors.py  events.py  graph.py  instructions.py  middleware.py  models.py  persistence.py  platform.py  platform_auth.py  runtime.py  scaffold.py  schedules.py  server.py  session.py  skills.py  subagents.py  testing.py  tracing.py  tui.py
src/leve/channels/: __init__.py  discord.py  slack.py
src/leve/connections/: __init__.py  openapi.py
src/leve/core/: __init__.py  graph.py  instructions.py  middleware.py  models.py  runtime.py  subagents.py
src/leve/evals/: __init__.py  expect.py
src/leve/loader/: __init__.py  discovery.py
src/leve/sandbox/: __init__.py  base.py  microsandbox.py  subprocess.py
src/leve/security/: __init__.py  auth.py  credentials.py  platform_auth.py
src/leve/serving/: __init__.py  app.py  cli.py  events.py  server.py  session.py  tui.py
src/leve/tools/: __init__.py
tests/: conftest.py  test_app.py  test_approvals.py  test_auth.py  test_channels.py  test_compaction.py  test_config.py  test_connections.py  test_deploy.py  test_devlog.py  test_evals.py  test_events.py  test_instructions.py  test_loader.py  test_persistence.py  test_restructure_shims.py  test_runtime.py  test_sandbox.py  test_schedules.py  test_server.py  test_skills.py  test_subagents.py  test_tools.py  test_tracing.py
