[project]
name = "leve"
version = "0.1.0"
description = "A filesystem-first, durable agent framework built on LangGraph."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    # Graph runtime + model layer (LangGraph / LangChain v1).
    "langchain>=1.3.10",
    "langgraph>=1.2.6",
    # Default provider (spec defaults to anthropic:claude-opus-4-8); other
    # providers are added by the user as needed (the model layer is agnostic).
    "langchain-anthropic>=1.4.6",
    # Local-dev durability.
    "langgraph-checkpoint-sqlite>=3.1.0",
    # CLI + serving surface (M1).
    "typer>=0.15.1",
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.1",
    "textual>=1.0.0",
]

[project.scripts]
leve = "leve.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "anyio>=4.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/leve"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.uv]
package = true
