[project]
name = "leve"
version = "0.1.0"
description = "A filesystem-first, durable agent framework built on LangGraph."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    # Graph runtime + model layer (LangGraph / LangChain v1).
    "langchain>=1.3.10",
    "langgraph>=1.2.6",
    # Default provider (spec defaults to anthropic:claude-opus-4-8); other
    # providers are added by the user as needed (the model layer is agnostic).
    "langchain-anthropic>=1.4.6",
    # Local-dev durability.
    "langgraph-checkpoint-sqlite>=3.1.0",
    # CLI + serving surface (M1).
    "typer>=0.15.1",
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.1",
    # Rich-powered dev TUI client.
    "rich>=13.9.0",
    # Skills frontmatter parsing.
    "pyyaml>=6.0.2",
    # Load project-local `.env` so secrets work the same in dev as in deploy.
    "python-dotenv>=1.0.1",
    # MCP connections (remote tool discovery).
    "langchain-mcp-adapters>=0.1.0",
]

[project.scripts]
leve = "leve.serving.cli:app"

[project.optional-dependencies]
# Production Postgres durability (checkpointer + store). Kept optional so the
# core install stays light and psycopg is only built when needed.
postgres = [
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary]>=3.2.0",
]
# Default production sandbox (microVM isolation). Requires the microsandbox server.
microsandbox = [
    "microsandbox>=0.1.0",
]
# Discord channel adapter (Ed25519 interaction signature verification).
discord = [
    "pynacl>=1.5.0",
]
# Google Gemini model provider (resolved by `google_genai:<model>` strings).
google = [
    "langchain-google-genai>=4.2.5",
]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "anyio>=4.8.0",
    "ruff>=0.4.10",
    "pre-commit>=3.7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/leve"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.uv]
package = true

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "B008",  # Do not perform function call in argument defaults (used for dependency injection sentinels)
    "B023",  # Function definition does not bind loop variable (used intentionally for latest state)
    "B027",  # Empty method in abstract base class
    "UP047", # Generic function should use type parameters (PEP 695 style)
    "B905",  # zip() without strict= parameter
    "UP042", # Class inherits from both str and Enum (StrEnum is 3.11+)
]
